pkg/gox/testdata/errors/qualified_dot_alias.gox
package main

func App() any {
	return <.Header />
}
